<resources>
    <!--Login y Registro-->
    <string name="app_name">Bienvenido a SeCoCo</string>
    <string name="correo">Email</string>
    <string name="Contrasn">Password</string>
    <string name="Ingres">Login</string>
    <string name="Regis">Register</string>
    <string name="RE">Registro</string>
    <string name="name">Nombres</string>
    <string name="ape">Apellidos</string>
    <string name="Eda">Edad</string>
    <string name="num">Celular</string>
    <string name="Dire">Dirección</string>
    <string name="Crear">Crear Usuario</string>
    <string name="ced">Cédula</string>
    <string name="medico">EPS</string>
    <string name="Local">Localidad</string>
    <string name="man">Masculino</string>
    <string name="women">Femenino</string>
    <string name="sintomas">Reportar sintomas</string>
    <string name="tipo">Tipo de Usuario</string>

    <!--Sintomas-->
    <string name="tempe">Fiebre</string>
    <string name="gargan">Dolor de garganta</string>
    <string name="nar">Congestión nasal</string>
    <string name="tos">Tos</string>
    <string name="resp">Dificultad para respirar</string>
    <string name="cansan">Fatiga</string>
    <string name="frio">Escalofrio</string>
    <string name="musculo">Dolor de músculos</string>
    <string name="ninguno">Ninguna de las anteriores</string>
    <string name="send">Enviar sintomas</string>

    <!--home-->
    <string name="seco">Bienvenido a SeCoCo</string>


    <!--Ubicación-->
    <string name="Ubicaci">Zonas transitadas</string>

    <!--Resultados prueba-->
    <string name="resu">Reporte resultados prueba</string>
    <string name="Fecha">Fecha toma examen</string>
    <string name="salud">Entidad</string>
    <string name="Result">Resultado</string>
    <string name="esx">Entidad examen</string>
    <string name="guar">Guardar resultado</string>
    <string name="po">Positivo</string>
    <string name="neg">Negativo</string>
    <string name="Fe">Fecha</string>

    <!--Cita-->
    <string name="cit">Agendación de Citas</string>
    <string name="date">Seleccionar fecha</string>
    <string name="fe">Fecha:</string>
    <string name="hour">Hora:</string>
    <string name="tim">Seleccionar hora</string>
    <string name="mes">Mensaje</string>
    <string name="enviar">Agendar cita</string>
</resources>