<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resultados">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/resu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fecha" />

                <Button
                    android:id="@+id/datepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:text="Button" />

                <EditText
                    android:id="@+id/fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="95dp"
                    android:layout_marginLeft="95dp"
                    android:layout_marginTop="-47dp"
                    android:background="@drawable/button_rounded_border"
                    android:editable="true"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/entidadexam"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_rounded_border"
                    android:ems="10"
                    android:hint="@string/salud"
                    android:inputType="textPersonName"
                    android:onClick="cargarDatos" />

            </LinearLayout>

            <EditText
                android:id="@+id/send_result"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="16sp"
                android:background="@drawable/button_rounded_border"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="30sp"
                android:text="@string/Result"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30sp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioPosit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5dp"
                    android:layout_marginLeft="-5dp"
                    android:layout_weight="1"
                    android:text="@string/po" />

                <RadioButton
                    android:id="@+id/radioNeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginLeft="120dp"
                    android:layout_weight="1"
                    android:text="@string/neg" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mesage"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="120sp"
                    android:background="@drawable/button_rounded_border"
                    android:hint="@string/mes" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/subir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_rounded"
                android:onClick="cargarDatos"
                android:text="@string/guar" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4">


        <ImageButton
            android:id="@+id/Home"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="returnHome"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/artboard_13" />

        <ImageButton
            android:id="@+id/Resultados"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="result"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/artboard_14" />

        <ImageButton
            android:id="@+id/citar_toma"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="cita"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/artboard_10" />

        <ImageButton
            android:id="@+id/Logout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/artboard_15" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>